name:                iona
version:             0.0.1
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:     base >= 4.9 && < 5,
                     containers >= 0.5 && < 1,
                     mtl >= 2.2 && < 3,
                     text >= 1.2 && < 2
  default-language:  Haskell2010
  exposed-modules:   Iona.Resolve,
                     Iona.Syntax.Expr,
                     Iona.Syntax.Name
  ghc-options:       -Wall
  hs-source-dirs:    src

test-suite spec
  build-depends:     base >= 4.9 && < 5,
                     hspec >= 2.4 && < 3
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    test
  main-is:           Spec.hs
  type:              exitcode-stdio-1.0
