name:                iona
version:             0.0.1
build-type:          Simple
cabal-version:       >=1.10
extra-source-files: src/Iona/Parse/Lex.x

library
  build-depends:     array >= 0.5 && < 1,
                     base >= 4.9 && < 5,
                     bytestring >= 0.10 && < 1,
                     containers >= 0.5 && < 1,
                     mtl >= 2.2 && < 3,
                     text >= 1.2 && < 2
  build-tools: alex, happy
  default-language:  Haskell2010
  exposed-modules:   Iona.CodeGen.PHP,
                     Iona.Parse,
                     Iona.Parse.Lex,
                     Iona.Parse.Syntax,
                     Iona.Resolve,
                     Iona.Syntax.Expr,
                     Iona.Syntax.Name,
                     Iona.Syntax.Pos
  ghc-options:       -Wall
  hs-source-dirs:    src

test-suite spec
  build-depends:     base >= 4.9 && < 5,
                     bytestring >= 0.10 && < 1,
                     hspec >= 2.4 && < 3,
                     iona
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    test
  main-is:           Spec.hs
  other-modules:     Iona.CodeGen.PHPSpec,
                     Iona.ParseSpec
  type:              exitcode-stdio-1.0
